fixed layout issues with social icons for mobile

--- a/app/styles/modules/_m-body.scss
+++ b/app/styles/modules/_m-body.scss
@@ -91,7 +91,7 @@
 	margin-left: auto;
 	padding:15px;
 	width: 0%;
-	height:125px;
+	height:135px;
 	font-size: em(0px);
 	background: $sitedescrip;
 	visibility: hidden;
