--- a/app/styles/modules/_m-foot.scss
+++ b/app/styles/modules/_m-foot.scss
@@ -1,6 +1,4 @@
 .social-icons{
-	margin-right: auto;
-	margin-left: auto;
 	padding-top: 70px;
 	width:100%;
 	height:200px;
@@ -8,9 +6,6 @@
 	//BEM Element for .social-icons
 	&__item{
 		display: inline-block;
-		position: relative;
-		margin-right: auto;
-		margin-left: auto;
 		padding-top: 0px;
 		padding-right: 10px;
 		padding-left: 10px;
