--- a/app/styles/states/_s-body.scss
+++ b/app/styles/states/_s-body.scss
@@ -1,7 +1,7 @@
 
 // displays site desciption when hovering over site item
 .exampleList__item:hover .site-description{
-	margin-top: 171px;
+	margin-top: 160px;
 	width:100%;
 	font-size: em(16px);
 	visibility: visible;
